# flask-alembic

./: .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  docs_require.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: lock.yaml  pre-commit.yaml  publish.yaml  tests.yaml
docs/: Makefile  api.md  api.rst  branches.md  branches.rst  conf.py  config.md  config.rst  databases.md  index.md  index.rst  make.bat  requirements.txt  use.md  use.rst
flask_alembic/: __init__.py  command.py  extension.py  script.py
flask_alembic/cli/: __init__.py  base.py  click.py  script.py
requirements/: build.txt  dev.txt  docs.in  docs.txt  tests-3.8.in  tests-3.8.txt  tests.txt  typing.in  typing.txt
src/flask_alembic/: __init__.py  _compat.py  cli.py  extension.py
src/flask_alembic/cli/: base.py  click.py  script.py
tests/: app.py  conftest.py  test_extension.py  test_fsa.py  test_fsa_lite.py  test_plain_sa.py  test_revisions.py
tests/cli/: test_check.py  test_current.py
tests/migrations/: 1000_init.py  1001_add_text_column.py
