[project]
name = "Flask-Alembic"
version = "3.0.0"
description = "Flask extension to integrate Alembic with Flask-SQLAlchemy."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{name = "David Lord", email = "davidism@gmail.com"},]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.13",
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "sqlalchemy>=2.0",
]

[project.urls]
Documentation = "https://flask-alembic.readthedocs.io"
Changes = "https://flask-alembic.readthedocs.io/changes/"
Source = "https://github.com/davidism/flask-alembic/"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_alembic"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flask_alembic", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.8"
files = ["src/flask_alembic", "tests"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
pythonVersion = "3.8"
include = ["src/flask_alembic", "tests"]

[tool.ruff]
src = ["src"]
fix = true
unsafe-fixes = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
