[project]
name = "Flask-Alembic"
version = "3.2.0.dev"
description = "Integrate Alembic with Flask."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "David Lord" }]
maintainers = [{ name = "Pallets", email = "contact@palletsprojects.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Programming Language :: Python",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.0",
    "flask>=3.0.0",
    "sqlalchemy>=2.0.31",
]

[project.urls]
Donate = "https://palletsprojects.com/donate"
Documentation = "https://flask-alembic.readthedocs.io"
Changes = "https://flask-alembic.readthedocs.io/page/changes/"
Source = "https://github.com/pallets-eco/flask-alembic/"
Chat = "https://discord.gg/pallets"

[dependency-groups]
dev = [
    "ruff",
    "tox",
    "tox-uv",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinxcontrib-log-cabinet",
]
docs-auto = [
    "sphinx-autobuild",
]
gha-update = [
    "gha-update ; python_full_version >= '3.12'",
]
pre-commit = [
    "pre-commit",
    "pre-commit-uv",
]
tests = [
    "flask-sqlalchemy",
    "flask-sqlalchemy-lite",
    "coverage",
    "pytest",
]
typing = [
    "mypy",
    "pyright",
]

[build-system]
requires = ["flit-core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_alembic"

[tool.uv]
default-groups = ["dev", "pre-commit", "tests", "typing"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["flask_alembic", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
exclude_also = [
    "if t.TYPE_CHECKING",
    "raise NotImplementedError",
    ": \\.{3}",
]

[tool.mypy]
python_version = "3.10"
files = ["src"]
show_error_codes = true
pretty = true
strict = true

[tool.pyright]
pythonVersion = "3.10"
include = ["src"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false

[tool.gha-update]
tag-only = [
    "slsa-framework/slsa-github-generator",
]

[tool.tox]
env_list = [
    "py3.14", "py3.13", "py3.12", "py3.11", "py3.10",
    "tests-min",
    "style",
    "typing",
    "docs",
]

[tool.tox.env_run_base]
description = "pytest on latest dependency versions"
runner = "uv-venv-lock-runner"
package = "wheel"
wheel_build_env = ".pkg"
constrain_package_deps = true
use_frozen_constraints = true
dependency_groups = ["tests"]
commands = [[
    "pytest", "-v", "--tb=short", "--basetemp={env_tmp_dir}",
    { replace = "posargs", default = [], extend = true },
]]

[tool.tox.env.tests-min]
description = "pytest on minimum dependency versions"
base_python = ["3.14"]
commands_pre = [
    [
        "uv", "pip", "install",
        "alembic==1.13.0",
        "flask==3.0.0",
        "sqlalchemy==2.0.31",
    ],
]

[tool.tox.env.style]
description = "run all pre-commit hooks on all files"
dependency_groups = ["pre-commit"]
skip_install = true
commands = [["pre-commit", "run", "--all-files"]]

[tool.tox.env.typing]
description = "run static type checkers"
dependency_groups = ["tests", "typing"]
commands = [
    ["mypy"],
    ["pyright"],
    ["pyright", "--verifytypes", "flask_alembic", "--ignoreexternal"],
]

[tool.tox.env.docs]
description = "build docs"
dependency_groups = ["docs"]
commands = [["sphinx-build", "-E", "-W", "-b", "dirhtml", "docs", "docs/_build/dirhtml"]]

[tool.tox.env.docs-auto]
description = "continuously rebuild docs and start a local server"
dependency_groups = ["docs", "docs-auto"]
commands = [["sphinx-autobuild", "-W", "-b", "dirhtml", "--watch", "src", "docs", "docs/_build/dirhtml"]]

[tool.tox.env.update-actions]
description = "update GitHub Actions pins"
labels = ["update"]
dependency_groups = ["gha-update"]
skip_install = true
commands = [["gha-update"]]

[tool.tox.env.update-pre_commit]
description = "update pre-commit pins"
labels = ["update"]
dependency_groups = ["pre-commit"]
skip_install = true
commands = [["pre-commit", "autoupdate", "--freeze", "-j4"]]

[tool.tox.env.update-requirements]
description = "update uv lock"
labels = ["update"]
dependency_groups = []
no_default_groups = true
skip_install = true
commands = [["uv", "lock", { replace = "posargs", default = ["-U"], extend = true }]]
