[metadata]
name = Flask-Alembic
version = 2.1.0.dev0
url = https://github.com/davidism/flask-alembic
author = David Lord
author_email = davidism@gmail.com
license = BSD-3-Clause
license_file = LICENSE.rst
description = Flask extension to integrate Alembic with Flask-SQLAlchemy.
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Database

[options]
packages = find:
include_package_data = True
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    Alembic>=0.8
    Flask>=0.10
    Flask-SQLAlchemy
    SQLAlchemy

[bdist_wheel]
universal = true
