[metadata]
name = Flask-Alembic
version = 3.0.0.dev
url = https://github.com/davidism/flask-alembic
author = David Lord
author_email = davidism@gmail.com
license = BSD-3-Clause
license_file = LICENSE.rst
description = Flask extension to integrate Alembic with Flask-SQLAlchemy.
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Database

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    Alembic>=0.8
    Flask>=0.10
    Flask-SQLAlchemy
    SQLAlchemy

[options.packages.find]
where = src

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ module exports names
    src/flask_alembic/__init__.py: F401
